<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="false"
    android:isScrollContainer="true"
    tools:activity="com.goblob2.notifications.NotificationsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/title_symptom"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textStyle="bold">

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp">


                <Button
                    android:id="@+id/fiver_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fever"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/congestion_nasal_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/congestion_nasal"
                    android:textAllCaps="false" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@id/layout_1"
            app:layout_constraintTop_toBottomOf="@id/layout_1">

            <Button
                android:id="@+id/cansancio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cansancio"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/coriza_nasal_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/coriza"
                android:textAllCaps="false" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@id/layout_2"
            app:layout_constraintTop_toBottomOf="@id/layout_2">

            <Button
                android:id="@+id/dificultad_respirar_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dificultad_respirar"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/dolor_cabeza_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dolor_cabeza"
                android:textAllCaps="false" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@id/layout_3"
            app:layout_constraintTop_toBottomOf="@id/layout_3">

            <Button
                android:id="@+id/dolor_cuerpo_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dolor_cuerpo"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/malestar_genaral_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/malestar_general"
                android:textAllCaps="false" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@id/layout_4"
            app:layout_constraintTop_toBottomOf="@id/layout_4">

            <Button
                android:id="@+id/tos_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tos"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/diarrea_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diarrea"
                android:textAllCaps="false" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@id/layout_5"
            app:layout_constraintTop_toBottomOf="@id/layout_5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/contacto_contagiado" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp">

                <Button
                    android:id="@+id/si"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/si"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/no"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/no_se"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/no_se"
                    android:textAllCaps="false" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@id/layout_6"
            app:layout_constraintTop_toBottomOf="@id/layout_6">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textAllCaps="false" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>