<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app1="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet_symptom"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <androidx.cardview.widget.CardView
        android:id="@+id/home_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_parent_rounded_corner_notifications"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/home_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_do_you_feel"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_fine"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_sentiment_satisfied_green_24dp"
                    android:gravity="center"
                    android:text="@string/good"
                    android:textSize="20dp"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/button_bad"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_sentiment_dissatisfied_red_24dp"
                    android:gravity="center"
                    android:text="@string/bad"
                    android:textSize="20dp"
                    android:textAllCaps="false" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>